# AI-Genertaed-image-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: evaluate_checkpoint.py  prepare_video_frames.py
src/aigenerated_detector/: __init__.py  config.py
src/aigenerated_detector/eval/: metrics.py
src/aigenerated_detector/explainability/: gradcam.py
src/aigenerated_detector/inference/: predict_image.py  predict_video.py
src/aigenerated_detector/models/: image_classifier.py
src/aigenerated_detector/train/: train_image.py  train_video_frame_agg.py  training_loop.py
src/aigenerated_detector/utils/: device.py  io.py  seed.py  video.py
streamlit_app/: app.py
